syntax = "proto3";

package org.ivovk.connect_rpc_scala.test;

service TestService {
  rpc Add(AddRequest) returns (AddResponse) {}
}

message AddRequest {
  int32 a = 1;
  int32 b = 2;
}

message AddResponse {
  int32 sum = 1;
}
